:lipstick: Fixed scrollbar corners

--- a/src/shared/styles/app.styl
+++ b/src/shared/styles/app.styl
@@ -25,6 +25,15 @@ main
     ::-webkit-scrollbar
       width 8px
 
+    ::-webkit-scrollbar-button
+      display none
+
+    ::-webkit-scrollbar-track
+      display none
+
+    ::-webkit-scrollbar-corner
+      display none
+
     ::-webkit-scrollbar-thumb
       background-color #D3DBE4
 
